# agus-maps-flutter

./: .gitignore  AGENTS.md  CHANGELOG.md  GUIDE.md  README.md  bitrise.yml  pubspec.yaml  vcpkg.json
.github/workflows/: android-build.yml
android/: build.gradle
docs/: ARCHITECTURE-ANDROID.md  CONTRIBUTING.md  IMPL-01-fix-mwm-registration.md  IMPL-02-mwm-metadata-storage.md  IMPL-03-mirror-service.md  IMPL-04-map-downloads-page.md  IMPLEMENTATION-ANDROID.md  IMPLEMENTATION-CI-CD.md  IMPLEMENTATION-IOS.md  IMPLEMENTATION-MACOS.md  IMPLEMENTATION-WIN.md  ISSUE-data-extraction-cold-start.md  ISSUE-debug-logging-release.md  ISSUE-dpi-mismatch-surface.md  ISSUE-egl-context-recreation.md  ISSUE-ffi-string-allocation.md  ISSUE-indexed-stack-memory.md  ISSUE-touch-event-throttling.md  RELEASE.md  RENDER-LOOP.md
example/: build_log.txt  build_log_win.txt  map_logs.txt  pubspec.yaml
example/android/app/: build.gradle.kts
example/assets/comaps_data/: categories.txt  classificator.txt  colors.txt  countries.txt  drules_hash  editor.config  patterns.txt  types.txt  visibility.txt
example/assets/comaps_data/categories-strings/bg.json/: localize.json
example/assets/comaps_data/categories-strings/en.json/: localize.json
example/assets/comaps_data/categories-strings/es-MX.json/: localize.json
example/assets/comaps_data/categories-strings/ru.json/: localize.json
example/assets/comaps_data/countries-strings/et.json/: localize.json
example/assets/comaps_data/countries-strings/fa.json/: localize.json
example/assets/comaps_data/countries-strings/hu.json/: localize.json
example/assets/comaps_data/countries-strings/ro.json/: localize.json
example/assets/comaps_data/countries-strings/ru.json/: localize.json
example/assets/comaps_data/countries-strings/sr.json/: localize.json
example/assets/comaps_data/countries-strings/sv.json/: localize.json
example/assets/comaps_data/sound-strings/fr.json/: localize.json
example/assets/comaps_data/styles/default/include/: Basemap_label.mapcss  Icons.mapcss  Icons_Label_Colors.mapcss  Roads.mapcss  Subways.mapcss  priorities_4_overlays.prio.txt
example/assets/comaps_data/styles/outdoors/include/: Icons.mapcss  priorities_4_overlays.prio.txt
example/assets/comaps_data/styles/vehicle/dark/: colors.mapcss
example/assets/comaps_data/styles/vehicle/include/: Icons.mapcss
example/assets/maps/: Gibraltar.mwm
example/ios/: Podfile
example/ios/Runner/: shaders_metal.metallib
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: downloads_cache.dart  downloads_tab.dart  main.dart  settings_tab.dart
example/linux/flutter/: generated_plugins.cmake
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ios/: agus_maps_flutter.podspec
ios/Classes/: AgusBridge.h  AgusMapsFlutterPlugin.swift  AgusMetalContextFactory.h  AgusMetalContextFactory.mm  AgusPlatformIOS.h  AgusPlatformIOS.mm  agus_maps_flutter_ios.mm
lib/: agus_maps_flutter.dart  agus_maps_flutter_bindings_generated.dart  mirror_service.dart  mwm_storage.dart
macos/: agus_maps_flutter.podspec
macos/Classes/: AgusBridge.h  AgusMapsFlutterPlugin.swift  AgusMetalContextFactory.mm  AgusPlatformMacOS.h  AgusPlatformMacOS.mm  agus_maps_flutter_macos.mm
macos/Frameworks/CoMaps.xcframework/: Info.plist
patches/: PATCHES.md
patches/comaps/: 0001-3party-CMakeLists.txt.patch  0001-fix-cmake.patch  0002-3party-freetype-CMakeLists.txt.patch  0002-platform-directory-resources.patch  0003-3party-icu-CMakeLists.txt.patch  0003-transliteration-directory-resources.patch  0004-3party-jansson-janssonconfig.h.patch  0004-fix-android-gl-function-pointers.patch  0005-3party-openinghours-rulesevaluation.cpp.patch  0005-libs-map-framework-cpp.patch  0006-3party-protobuf-CMakeLists.txt.patch  0006-libs-map-routing_manager-cpp.patch  0007-CMakeLists.txt.patch  0007-libs-routing-routing_session-cpp.patch  0008-libs-base-logging.cpp.patch  0008-libs-routing-speed_camera_manager-cpp.patch  0009-fix-android-gl3stub-include-path.patch  0009-libs-base-stringutils.hpp.patch  0010-fix-ios-cmake-missing-files.patch  0010-libs-base-threadchecker.cpp.patch  0011-3party-icu-CMakeLists-txt.patch  0011-libs-base-threadchecker.hpp.patch  0011-libs-platform-platform_mac-mm.patch  0011-libs-shaders-metal_program_pool-mm.patch  0012-active-frame-callback.patch  0012-libs-base-timer.cpp.patch  0012-libs-search-CMakeLists-txt.patch  0013-libs-drape-drapetests-glfunctions.cpp.patch  0014-libs-drape-dynamictexture.hpp.patch  0014-libs-shaders-metal_program_pool-mm.patch  0015-libs-drape-framebuffer.hpp.patch  0015-libs-platform-platform_mac-mm.patch  0016-libs-drape-glfunctions.cpp.patch  0017-libs-drape-glfunctions.hpp.patch  0017-libs-shaders-metal_program_pool-mm.patch  0018-fix-shutdown-threads-null-safety.patch  0018-libs-drape-glincludes.hpp.patch  0019-libs-drape-shader.cpp.patch  0020-libs-drape-texture.hpp.patch  0021-libs-drape-tmreadresources.hpp.patch  (+30 more)
scripts/: apply_comaps_patches.ps1  apply_comaps_patches.sh  bootstrap_android.sh  bootstrap_ios.sh  bootstrap_macos.sh  bootstrap_windows.ps1  build_binaries_android.sh  build_binaries_ios.sh  build_binaries_macos.sh  build_ios_xcframework.sh  bundle_headers.sh  bundle_ios_headers.sh  copy_comaps_data.sh  download_ios_xcframework.sh  download_libs.sh  fetch_comaps.ps1  fetch_comaps.sh  regenerate_patches.ps1  regenerate_patches.sh  validate_patches.sh
src/: CMakeLists.txt  agus_angle_context_factory.cpp  agus_angle_context_factory.hpp  agus_env_utils.hpp  agus_gui_thread.cpp  agus_gui_thread.hpp  agus_gui_thread_win.cpp  agus_gui_thread_win.hpp  agus_maps_flutter.cpp  agus_maps_flutter.h  agus_maps_flutter_win.cpp  agus_ogl.cpp  agus_ogl.hpp  agus_platform.cpp  agus_platform_win.cpp
windows/: CMakeLists.txt  agus_maps_flutter_plugin.cpp  agus_maps_flutter_plugin.h  agus_maps_flutter_plugin_c_api.cpp
windows/include/agus_maps_flutter/: agus_maps_flutter_plugin_c_api.h
(+3 files in other folders)
